--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -95,3 +95,44 @@
         align-self: flex-end;
     }
 }
+
+/* Agenda item */
+.agenda__item {
+    display: grid;
+    grid-template-areas: "imagem imagem"
+        "informacoes atracao"
+        "informacoes atracao"
+        ;
+    grid-template-rows: 45% 55%;
+    
+}
+
+.agenda__item img {
+    grid-area: imagem;
+}
+
+.agenda__informacoes {
+    grid-area: informacoes;
+    padding-top: 0px !important;
+    z-index: 1;
+}
+
+.agenda__atracao {
+    grid-area: atracao;
+    background-color: #D9D9D9;
+    z-index: 1;
+}
+
+.agenda__atracao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly ;
+}
+
+.agenda__informacoes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 5px
+}
