--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -48,11 +48,13 @@
 .eventos__item h3 {
     grid-area: nome;
     align-self: center;
+    margin-top: 10px;
 }
 
 .eventos__item h4 {
     grid-area: data;
     align-self: center;
+    margin-top: 10px;
 }
 
 .eventos__item h5 {
@@ -134,5 +136,5 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 5px
+    row-gap: 5px;
 }
