--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -28,46 +28,40 @@
     }
 }
 
-
+/* Eventos */
 
 .eventos__item {
     display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: auto repeat(2, 1fr) auto;
-    grid-template-areas: 
-        "imagem imagem"
-        "nome nome"
-        "data data"
-        "loca botao";
+    grid-template-areas: "imagem imagem"
+        "descricao botao";
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 60% 40%;
+    padding-bottom: 0px !important;
 }
 
 .eventos__item img {
     grid-area: imagem;
+    height: 100%;  
 }
 
-.eventos__item h3 {
-    grid-area: nome;
-    align-self: center;
-    margin-top: 10px;
-}
-
-.eventos__item h4 {
-    grid-area: data;
-    align-self: center;
-    margin-top: 10px;
-}
-
-.eventos__item h5 {
-    grid-area: "local";
-    align-self: center;
+.item__descricao {
+    grid-area: descricao;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem 0px 1rem;
 }
 
 .eventos__item button {
     grid-area: botao;
+    padding: 0px 12px;
+    align-self: end;
+    justify-self: end;
+    margin-bottom: 1rem;
 }
 
 /*  categorias  */
-@media (min-width: 1440px){
+@media (min-width: 1280px){
     .categorias {
         display: grid;
         grid-template-areas: 
@@ -76,7 +70,7 @@
             "lista imagem"
         ;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2, auto) 1fr;
+        grid-template-rows: auto auto 1fr;
         column-gap: 1.5rem;
     }
 
@@ -88,13 +82,13 @@
         grid-area: lista;
     }
 
-    .categorias__destaques {
+    .destaques {
         grid-area: destaques;
     }
 
-    .categorias__imagem {
+    .categorias .categorias__imagem {
         grid-area: imagem;
-        align-self: flex-end;
+        height: 224px;
     }
 }
 
