--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,11 +1,32 @@
 /* Cabeçalho */
 
 .menu {
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     align-items: center;
-    flex-wrap: wrap;
-    column-gap: 33px;
+}
+
+.menu__item:nth-child(1) {
+    grid-row: 1/2;
+    grid-column: 1/4;
+}
+
+.menu__item:nth-child(2) {
+    justify-self: center;
+}
+
+.menu__item:nth-child(3) {
+    justify-self: center;
+}
+
+.menu__item:nth-child(4) {
+    justify-self: center;
+}
+
+.menu__pesquisar {
+    grid-row: 3/4;
+    grid-column: 1/4 ;
 }
 
 /* Categorias */
@@ -68,9 +89,20 @@
     /* Cabeçalho */
 
     .menu {
-        column-gap: 75px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto auto;
     }
 
+    .menu__item:nth-child(1) {
+        grid-row: 1/2;
+        grid-column: 1
+    }
+
+    .menu__pesquisar {
+        grid-row: 2/3;
+        grid-column: 1/5;
+        justify-self: center;
+    }
     /* Categorias */
 
     .categorias__lista {
@@ -91,13 +123,20 @@
 
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 924px) {
+    .eventos .eventos__item, .agenda__lista .agenda__item {
+        width: 298px;
+    }
+}
 
+
+@media (min-width: 1024px) {
     /* Cabeçalho */
 
     .menu {
-        column-gap: 105px;
-        flex-wrap: nowrap;
+        display: flex;
+        justify-content: space-around;  
+        column-gap: 70px;
     }
 
     .menu__item:nth-child(1) {
@@ -121,7 +160,7 @@
     }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
     .categorias__destaques {
         display: flex;
         flex-direction: column;
@@ -135,6 +174,6 @@
 @media (min-width: 1440px){
     /* Eventos */
     .eventos__item {
-        max-width: 307px;
+        width: 282px !important;
     }
 }
