--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -12,8 +12,80 @@
     grid-row: 2/4;
 }
 
+/* Eventos */
+.eventos__item {
+    display: grid;
+    grid-template-areas: "imagem imagem"
+        "descricao botao";
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 60% 40%;
+    padding-bottom: 0px !important;
+}
+
+.eventos__item img {
+    grid-area: imagem;
+    height: 100%;  
+}
+
+.item__descricao {
+    grid-area: descricao;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem 0px 1rem;
+}
+
+.eventos__item button {
+    grid-area: botao;
+    padding: 0px 12px;
+    align-self: end;
+    justify-self: end;
+    margin-bottom: 1rem;
+}
+
+/* Agenda item */
+.agenda__item {
+    display: grid;
+    grid-template-areas: "imagem imagem"
+        "informacoes atracao"
+        "informacoes atracao"
+        ;
+    grid-template-rows: 45% 55%;
+    
+}
+
+.agenda__item img {
+    grid-area: imagem;
+}
+
+.agenda__informacoes {
+    grid-area: informacoes;
+    padding-top: 0px !important;
+    z-index: 1;
+}
+
+.agenda__atracao {
+    grid-area: atracao;
+    background-color: #D9D9D9;
+    z-index: 1;
+}
+
+.agenda__atracao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly ;
+}
+
+.agenda__informacoes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 5px;
+}
+
 /* Rodapé */
-footer {
+.rodape {
     display: grid;
     grid-template-areas: "encontre cidades"
         "categorias sobre"
@@ -71,48 +143,16 @@ footer {
         grid-column: 4/5;
         grid-row: 1/3;
     }
-}
 
-/* Eventos */
-
-.eventos__item {
-    display: grid;
-    grid-template-areas: "imagem imagem"
-        "descricao botao";
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 60% 40%;
-    padding-bottom: 0px !important;
-}
-
-.eventos__item img {
-    grid-area: imagem;
-    height: 100%;  
-}
-
-.item__descricao {
-    grid-area: descricao;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1rem 0px 1rem;
-}
-
-.eventos__item button {
-    grid-area: botao;
-    padding: 0px 12px;
-    align-self: end;
-    justify-self: end;
-    margin-bottom: 1rem;
-}
-
-/* rodape */
-.rodape {
-    grid-template-areas: 
-        "encontre cidades categorias sobre"
-        "anuncie . . logo"
-        ;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto 1fr;
+    /* rodape */
+    .rodape {
+        grid-template-areas: 
+            "encontre cidades categorias sobre"
+            "anuncie . . logo"
+            ;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto 1fr;
+    }
 }
 
 
@@ -154,45 +194,8 @@ footer {
             ;
         grid-template-columns: repeat(6, 1fr);
     }
-}
 
-/* Agenda item */
-.agenda__item {
-    display: grid;
-    grid-template-areas: "imagem imagem"
-        "informacoes atracao"
-        "informacoes atracao"
-        ;
-    grid-template-rows: 45% 55%;
-    
-}
-
-.agenda__item img {
-    grid-area: imagem;
-}
-
-.agenda__informacoes {
-    grid-area: informacoes;
-    padding-top: 0px !important;
-    z-index: 1;
-}
-
-.agenda__atracao {
-    grid-area: atracao;
-    background-color: #D9D9D9;
-    z-index: 1;
-}
-
-.agenda__atracao {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly ;
-}
-
-.agenda__informacoes {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 5px;
+    .rodape__logo {
+        margin-left: auto;
+    }
 }
